[package]
name = "egui_rasterizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { git = "https://github.com/emilk/egui" }
tiny-skia = "0.6"

[dev-dependencies]
egui-winit = { git = "https://github.com/emilk/egui" }
eframe = { git = "https://github.com/emilk/egui" }
softbuffer = "0.1"
egui_demo_lib = { git = "https://github.com/emilk/egui" }
